--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "lint-staged": "^15.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
