--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "jest --findRelatedTests --bail"
+      "eslint --fix"
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "lint-staged": "^15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
