--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm run test"
+      "pre-push": "jest --findRelatedTests --bail"
     }
   },
   "lint-staged": {
