--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
