--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "vite-project",
+  "name": "next-js-app",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "format:fix": "prettier --write *.{js,css,ts,tsx,jsx}",
     "prepare": "husky install",
     "test": "jest"
@@ -26,12 +25,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "lint-staged": "^15.0.2",
+    "next": "13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@types/node": "20.10.0",
+    "eslint-config-next": "14.0.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
@@ -42,7 +44,6 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
-    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -56,7 +57,6 @@
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "typescript": "^5.0.2"
   }
 }
