--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "next": "13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
@@ -55,7 +56,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.2"
+    "ts-jest": "^29.1.1"
   }
 }
