--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "sharp": "^0.32.6",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
